# DevOpsInd

./: README.md
ind1/: basic_tasks_1.py  demo.py  generator.py  string_operations.py
ind1/test/: generator_tests.py  string_operations_tests.py
ind2/: Yemelyanov_PDM51_IND5.csv  Yemelyanov_PDM51_IND5.json  Yemelyanov_PDM51_IND5.xml  main.py
ind2/models/: desired_perfomance.py  perfomance.py  real_perfomance.py  student.py  student_data.py
ind2/savers/: csv_saver.py  data_saver.py  json_saver.py  xml_saver.py
ind3/: README.md  click_tool.py  fire_expose.py  sys_tool.py  utils.py
ind4/devpi-data/: .nodeinfo  .sqlite
ind4/mypackage_vladem/: README.md  core.py  pyproject.toml
ind5/: app.py  statsd_server.py
ind6/: app.py
ind6/tests/: test_app.py
