[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage_vladem"
version = "0.1.0"
description = "A demo Python package"
readme = "README.md"
authors = [
    { name="Vladyslav Yemelianov", email="vladem255@gmail.com" }
]
requires-python = ">=3.10"

[project.urls]
Homepage = "http://localhost"
